# ChangeLog for sys-apps/portage
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.16616 (23 Sep 2010)

  23 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16610.ebuild, +portage-2.2.01.16616.ebuild:
  Replace snapshot for bug #338441

  22 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15838.ebuild, -portage-2.2.01.15417.ebuild:
  Drop some versions now we know that at least 15553 was stable enough (off
  git)

*portage-2.2.01.16610 (22 Sep 2010)

  22 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16365.ebuild, +portage-2.2.01.16610.ebuild:
  Drop masked version (bug #337945), new snapshot for a new try

*portage-2.2.01.16365 (17 Sep 2010)

  17 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.16365.ebuild:
  Bump, this release has patched up EROOT support from master

  05 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16270.ebuild:
  Drop totally faulty version

  05 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.01.16270.ebuild:
  dekeyword 2.2.01.16270 as it seems to have weird issues with merging
  packages

*portage-2.2.01.16270 (05 Sep 2010)

  05 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.16270.ebuild:
  Bump, many main-stream EROOT support changes, includes fix for bug #334271

*portage-2.2.01.15553 (09 Aug 2010)

  09 Aug 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.15478.ebuild, +portage-2.2.01.15553.ebuild:
  Replace last snapshot by one that is tested better

*portage-2.2.01.15478 (07 Aug 2010)

  07 Aug 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.15354-r1.ebuild, +portage-2.2.01.15478.ebuild:
  Bump snapshot

*portage-2.2.01.15417 (23 Jul 2010)

  23 Jul 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.15417.ebuild:
  Version bump, includes darkside's redundant mirror patch

*portage-2.2.01.15354-r1 (22 Jul 2010)
